--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-sudo: requered
-services: 
+sudo: required
+language: generic
+
+services:
   - docker
 
 before_install:
-  - docker build -t alleshka/docker-react -f DockerFile.dev .
+  - docker build -t alleshka/docker-react -f Dockerfile.dev .
 
-  script:
-    - docker run -e CI=true alleshka/docker-react npm run test -- --coverage
+script:
+  - docker run -e CI=true alleshka/docker-react npm run test
